* 2016.12.29 - automatically duplicating all deps with 'compiler' in the key
               to avoid mix ups of env by packages compiled with different compiler ...

* 2016.12.28 - supporting duplication of deps (primerily to reset compiler vars to correct values at the end)

* 2016.12.27 - supporting LLVM from the new Android NDK (for Caffe)

* 2016.12.26 - updated wget for Windows (to download Caffe deps without SSL certificate)

* 2016.12.21 - major update to record package configuration during installation
               to be able to correctly re-register soft when env is cleaned ...
               It also allows to pre-record information about version 
               and other hints to CK in the CK-compatible third-party packages (bright future ;) ).

* 2016.12.20 - added detection of Raspberry Pi platform features
             - added detection of Odroid platform 
             - added "ck clean env:*" to remove both CK entries and related packages

* 2016.12.19 - fixing typos in soft scripts

* 2016.12.13 - fixing bug in module 'machine'

* 2016.12.10 - added script:download-and-install-package-with-cmake to start unifying download + cmake + install
             - added 'ask_version' for packages

* 2016.12.07 - fixing Bazel soft desc

* 2016.12.05 - added os:*arm-v7a (mainly for Caffe for Android)

* 2016.12.02 - added user-friendly print of OS alias
             - added better error reporting when host/target OS is not matching env entries

* 2016.12.01 - added soft:compiler.llvm.android.ndk (and started preparing paths without GCC)
             - a few cosmetic changes

* 2016.11.30 - do not show empty dependencies which are not for a used target
             - fixed using of preprocess scripts from another entry

* 2016.11.28 - do not look for connected Android device, when just refreshing existing env for it

* 2016.11.24 - fixing version detection of texinfo

* 2016.11.20 - detect OS ABI using uname -m in 'detect platform.os'