@@ -1,0 +1,1 @@
+android21-arm-v7a-neon
