@@ -1,0 +1,1 @@
+android19-arm-v7a-hard-neon
