@@ -1,0 +1,21 @@
+{
+  "backup_data_uid": "edd678a298483bab",
+  "backup_module_uid": "0440cb72c2bc5cc6",
+  "backup_module_uoa": "os",
+  "control": {
+    "author": "Grigori Fursin",
+    "author_email": "Grigori.Fursin@cTuning.org",
+    "author_webpage": "http://fursin.net",
+    "copyright": "See CK COPYRIGHT.txt for copyright details",
+    "engine": "CK",
+    "iso_datetime": "2016-12-29T14:10:12.051356",
+    "license": "See CK LICENSE.txt for licensing details",
+    "version": [
+      "1",
+      "8",
+      "5",
+      "3"
+    ]
+  },
+  "data_name": "android21-arm-v7a-hard-neon"
+}
