@@ -1,0 +1,95 @@
+{
+  "abi": "armeabi-v7a",
+  "adb_all_params": "adb $#device#$ shell getprop $#redirect_stdout#$ $#output_file#$",
+  "adb_devices": "adb devices $#redirect_stdout#$ $#output_file#$",
+  "adb_dumpsys": "adb $#device#$ shell dumpsys $#category#$ $#redirect_stdout#$ $#output_file#$",
+  "adb_serial_no": "adb $#device#$ get-serialno $#redirect_stdout#$ $#output_file#$",
+  "android_compiler_prefix": "arm-linux-androideabi",
+  "android_ndk_arch": "arm",
+  "android_ndk_platform": "android-21",
+  "android_toolchain": "arm-linux-androideabi",
+  "base_uoa": "",
+  "batch_prefix": "#! /bin/sh\n# CK generated script\n",
+  "bin_prefix": "./",
+  "bits": "32",
+  "bits_all": [
+    "32"
+  ],
+  "change_dir": "cd",
+  "ck_name": "linux",
+  "ck_name2": "android",
+  "cm_tool_prefix": "./",
+  "cpu_features": {
+    "arm_fp_hard": "yes",
+    "arm_fp_neon": "yes"
+  },
+  "delete_file": "rm ",
+  "dir_sep": "/",
+  "env_call": ".",
+  "env_quotes": "\"",
+  "env_quotes_if_space": "\"",
+  "env_quotes_if_space_in_call": "\"",
+  "env_separator": ";",
+  "env_set": "export ",
+  "env_var_extra1": "{",
+  "env_var_extra2": "}",
+  "env_var_separator": ":",
+  "env_var_start": "$",
+  "env_var_stop": "",
+  "exec_prefix": "./",
+  "extra_env": "export PATH=/data/local/tmp/tools:$PATH; export LD_LIBRARY_PATH=.:/data/local/tmp:/data/local/tmp/lib:$LD_LIBRARY_PATH",
+  "extract_package": {
+    ".tar.bz2": "rm -f $#cm_file_without_one_ext#$ ; bzip2 -d $#cm_file#$ ; tar xvf $#cm_file_without_one_ext#$; rm -f $#cm_file_without_one_ext#$",
+    ".tar.gz": "rm -f $#cm_file_without_one_ext#$ ; gzip -d $#cm_file#$ ; tar xvf $#cm_file_without_one_ext#$; rm -f $#cm_file_without_one_ext#$",
+    ".zip": "unzip -q -o $#cm_file#$ ; rm -f $#cm_file#$"
+  },
+  "family": "linux",
+  "file_extensions": {
+    "dll": ".so",
+    "exe": ".out",
+    "java_class": ".class",
+    "java_lib": ".jar",
+    "lib": ".a"
+  },
+  "generic": "yes",
+  "interpreter": "sh",
+  "lib_dir": "lib",
+  "make_dir": "mkdir ",
+  "no_script_execution": "yes",
+  "path_to_scripts": "/data/local/tmp/tools",
+  "processor": "arm",
+  "quit_if_error": "er=$?; if [ $er != 0 ]; then exit $er; fi",
+  "redirect_stderr": "2>",
+  "redirect_stderr_aggr": "2>>",
+  "redirect_stderr_with_stdout": "2>>&1",
+  "redirect_stdout": ">",
+  "redirect_stdout_aggr": ">>",
+  "rem": "#",
+  "remote": "yes",
+  "remote_dir": "/data/local/tmp",
+  "remote_init": "adb $#device#$ shell echo \"Initializing device ...\"",
+  "remote_pull": "adb $#device#$ pull $#file1#$ $#file2#$",
+  "remote_push": "adb $#device#$ push $#file1#$ $#file2#$",
+  "remote_shell": "adb $#device#$ shell",
+  "script_ext": ".sh",
+  "script_get_gpu_frequency": "ck-print-gpu-freq",
+  "script_set_cpu_freq": "ck-set-cpu-online-and-frequency $#freq#$",
+  "script_set_gpu_freq": "ck-set-gpu-online-and-frequency $#freq#$",
+  "script_set_max_cpu_freq": "ck-set-cpu-performance",
+  "script_set_max_gpu_freq": "ck-set-gpu-performance",
+  "script_set_min_cpu_freq": "ck-set-cpu-powersave",
+  "script_set_min_gpu_freq": "ck-set-gpu-powersave",
+  "script_start_power_monitor": "ck-set-power-sensors 1",
+  "script_stop_power_monitor": "ck-set-power-sensors 0",
+  "set_affinity": "taskset -c $#ck_affinity#$",
+  "set_executable": "chmod 755",
+  "suppress_output": "> /dev/null",
+  "tags": [
+    "os",
+    "remote",
+    "android",
+    "android-with-arch",
+    "android-21",
+    "arm"
+  ]
+}
